# PoisSolvers

./: .gitignore  CMakeLists.txt  README.md  engine_description.xml  install_dependencies  option_dialog.ui  pois_with_hopdyn.physeng  poissolver.physeng
FEM/: .release_time  domain.geo  domain.msh
PoisFFT/: .~lock.PoissonSolverSlides.odp#  Makefile  PoissonSolverSlides.odp  README  asdf.xml  engine_description.xml  sim_problem.xml
PoisFFT/src/: .sconsign.dblite  CMakeLists.txt  SConstruct  compile.sh  compileandrun.sh  cooldbdesign.xml  cooldbdesign2.xml  electrodes.cpp  electrodes.h  electrodes.hpp  outcorr.txt  outfile.txt  outrho.txt  phys_connector.cpp  phys_connector.h  phys_engine.cc  phys_engine.cpp  phys_engine.h  poisfft.h  poismain.cpp  poissolver.cpp  poissolver.h  problem.cc  problem.cpp  problem.h  profileresult.out  simconfig  testpoisson.c  testpoisson.cc  testpoisson.cc~  testpoisson.cpp
PoisFFT/src/simxmls/: cooldbdesign.xml  cooldbdesignbackup.xml
multigrid/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  main.cpp  poisson  poisson.cpp  poisson.hpp  poisson_A0.1.nc  poisson_A0.2.nc  poisson_A0.5.nc  poisson_A1.0.nc  poisson_A2.0.nc  poisson_A3.0.nc  poisson_A4.0.nc  settings.cpp  test.txt
pois_with_hopdyn/: pois_with_hopdyn.py
poissonsolver/: 1DReference.cpp  2DBLAS.gp  2Dtest.gp  2Dtestgen.gp  2DtestgenCOLOUR.gp  2Dtestmulti.gp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gmon.out  m_matrix  main.cpp  mg.m  perf.data  perf.data.old  poissonsolver  profres.txt  profres0.txt  profres1.txt  profres2.txt  (+2 more)
(+119 files in other folders)
